bugfix (time & ui update on NFC activity)